zope.testing Changelog
**********************

3.8.1 (unreleased)
==================

- Produce a clear error message when subprocess doesn't follow the
  zope.testing.testrunner protocol (LP#407916).


3.8.0 (2009-07-24)
==================

- Testrunner automatically picks up descendants of unittest.TestCase in test
  modules, so you don't have to provide a test_suite() anymore.


3.7.7 (2009-07-15)
==================

- Clean up support for displaying tracebacks with supplements by turning it
  into an always-enabled feature and making the dependency on zope.exceptions
  explicit.

- Fix #251759: Test runner descended into directories that aren't Python
  packages.

- Code cleanups.


3.7.6 (2009-07-02)
==================

- Add zope-testrunner console_scripts entry point. This exposes a
  zope-testrunner binary with default installs allowing the testrunner to be
  run from the command line.

3.7.5 (2009-06-08)
==================

- Fix bug when running subprocesses on Windows.

- The option REPORT_ONLY_FIRST_FAILURE (command line option "-1") is now
  respected even when a doctest declares its own REPORTING_FLAGS, such as
  REPORT_NDIFF.

- Fixed bug that broke readline with pdb when using doctest
  (see http://bugs.python.org/issue5727).

- Made tests pass on Windows and Linux at the same time.


3.7.4 (2009-05-01)
==================

- Filenames of doctest examples now contain the line number and not
  only the example number. So a stack trace in pdb tells the exact
  line number of the current example. This fixes
  https://bugs.launchpad.net/bugs/339813

- Colorization of doctest output correctly handles blank lines.


3.7.3 (2009-04-22)
==================

- Better deal with rogue threads by always exiting with status so even
  spinning daemon threads won't block the runner from exiting. This deprecated
  the ``--with-exit-status`` option.


3.7.2 (2009-04-13)
==================

- fix test failure on Python 2.4 because of slight difference in the way