@@ -23,17 +23,17 @@ import unittest
 import zope.testing.testrunner.interfaces
 
 
-def run(defaults=None, args=None):
+def run(defaults=None, args=None, script_parts=None):
     """Main runner function which can be and is being used from main programs.
 
     Will execute the tests and exit the process according to the test result.
 
     """
-    failed = run_internal(defaults, args)
+    failed = run_internal(defaults, args, script_parts=script_parts)
     sys.exit(int(failed))
 
 
-def run_internal(defaults=None, args=None):
+def run_internal(defaults=None, args=None, script_parts=None):
     """Execute tests.
 
     Returns whether errors or failures occured during testing.
@@ -41,7 +41,7 @@ def run_internal(defaults=None, args=None):
     """
     # XXX Bah. Lazy import to avoid circular/early import problems
     from zope.testing.testrunner.runner import Runner
-    runner = Runner(defaults, args)
+    runner = Runner(defaults, args, script_parts=script_parts)
     runner.run()
     return runner.failed
 
